[gd_scene load_steps=5 format=3 uid="uid://cgiy16ss3fg6n"]

[ext_resource type="Script" path="res://Scripts/Helpers/pick_up.gd" id="1_a5fgq"]
[ext_resource type="Script" path="res://Scripts/Helpers/active_node.gd" id="1_yauyi"]
[ext_resource type="PackedScene" uid="uid://rhxly5n72acf" path="res://Nodes/ActiveSprites/door_accept_sprite.tscn" id="2_nglsl"]

[sub_resource type="SphereShape3D" id="SphereShape3D_1q38j"]

[node name="PickUpBase" type="Node3D"]
script = ExtResource("1_a5fgq")
TAKE_MESSAGE = "items.take"

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_1q38j")

[node name="ActiveNode" type="Node3D" parent="." node_paths=PackedStringArray("AREA")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("1_yauyi")
SPRITE = ExtResource("2_nglsl")
AREA = NodePath("../Area3D")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="action_pressed" from="ActiveNode" to="." method="_on_active_node_action_pressed"]
